更新全新的配置项
